--- a/content/index.asciidoc
+++ b/content/index.asciidoc
@@ -4,11 +4,12 @@ Sven Bauhan <contact@sven.bauhan.name>
 :jbake-type: page
 :jbake-tags: info
 :jbake-status: published
+:lang: de
 
-My name is Sven Bauhan.
-This is my personal webpage.
+Mein Name ist Sven Bauhan.
+Das ist meine private Internetpräsenz.
 
-== Personal Information
+== Kontaktdaten
 
 ****
 Sven Bauhan +
@@ -18,17 +19,19 @@ contact@sven.bauhan.name
 PGP Key: link:../data/SvenBauhan-gnupg1@sven.bauhan.name(0x52AC92A8)pub.asc[gnupg1@sven.bauhan.name(0x52AC92A8)]
 ****
 
-== Work
+== Beruf
 
 ****
-I work as software developer at http://www.dfs.de[Deutsche Flugsicherung GmbH].
+Ich arbeite derzeit als Softwareentwickler bei der http://www.dfs.de[Deutschen Flugsicherung GmbH].
 
-Here is my https://www.monster.de/resumes/Resume/PreviewResume/zy26tjvmdktvdgi5[Monster profile]
-and https://www.xing.com/profile/Sven_Bauhan?sc_o=mxb_p[Xing profile].
+Hier ist mein https://www.monster.de/resumes/Resume/PreviewResume/zy26tjvmdktvdgi5[Monster Profil]
+und mein https://www.xing.com/profile/Sven_Bauhan?sc_o=mxb_p[Xing Profil].
 ****
 
-== Private activity
+== Private Aktivitäten
 
 ****
-I work at founding a new housing project called http://www.heinersyndikat.de[Heinersyndikat].
+Ich beteilige mich an der Gründung eines Wohnprojekts names http://www.heinersyndikat.de[Heinersyndikat].
+
+Meine Software Projekte habe ich bei https://github.com/teezett[Github] gehostet.
 ****
